Updated java cicd pipeline.

--- a/Day5/java-cicd-pipeline.yml
+++ b/Day5/java-cicd-pipeline.yml
@@ -24,6 +24,9 @@ metadata:
   labels:
     name: jegan
 spec:
+  selector:
+    matchLabel:
+      name: jegan
   accessModes:
   - ReadWriteMany
   resources:
